--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       content="Web site created using create-react-app"
     />
     <link href="https://fonts.googleapis.com/css?family=Monoton&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative:700|Roboto|Roboto+Slab" rel="stylesheet">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
