--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     />
     <link href="https://fonts.googleapis.com/css?family=Monoton&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative:700|Roboto|Roboto+Slab" rel="stylesheet">
+    <link rel="shortcut icon" type="image/png" href="http://img04.deviantart.net/abde/i/2014/106/e/8/white_tree_of_gondor_symbol_by_drdraze-d7ebn9l.png" alt="">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
